[tool.poetry]
name = "repl_python3_srs-numpy-2-s22-marsbars123"
version = "0.1.0"
description = ""
authors = ["marsbars123 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
np = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
